@@ -21,6 +21,8 @@
    - Removed codes related to user registration & password management (margaretha)  
 22/01/2019
    - Added create, edit, retrieve user default setting controllers (margaretha)
+22/01/2019
+   - Updated default setting controllers & added tests (margaretha)
 
 # version 0.61.4
 14/11/2018
